# yesdl

./: Avatar.c  Avatar.cpp  Avatar.h  CMakeLists.txt  Edit.c  Edit.cpp  Edit.h  Map.c  Map.cpp  Map.h  MySDL.cpp  MySDL.h  README.md  Texture.c  Texture.cpp  Texture.h  main.c  main.cpp  sll.c  sll.cpp  sll.h
C/: Avatar.c  Map.c  Texture.c  sll.c
assets/: New_Piskel-1.png_2.c
assets/PISKEL_versions/: All Textures.piskel  New_Piskel-1.png_2-20240218-220419.piskel  Texture.c  Texture.h  player.piskel  wall_test_v1.piskel  wall_top_test_v1.piskel
levels/: big.txt  huge.txt  huge_test.txt  huge_test2.txt  levelSelect.txt  simple.txt  small.txt  tiny.txt
